# manga-colorization

./: .gitignore  CLAUDE.md  README.md  colorize  colorize.py  main.py  pyproject.toml  requirements.txt
docs/plans/: 2026-02-20-manga-colorizer-v1-design.md  2026-02-20-manga-colorizer-v1.md
notebooks/: kaggle_train.ipynb
src/: pipeline.py  postprocess.py  preprocess.py
tests/: test_main.py  test_pipeline.py  test_postprocess.py  test_preprocess.py
