[project]
name = "manga-colorization"
version = "0.1.0"
description = "AI pipeline for colorizing B&W manga panels using reference-based style transfer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "diffusers>=0.28.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "opencv-python>=4.9.0",
    "scikit-image>=0.22.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
manga-colorize = "main:main"
